<resources>
    <string name="app_name">Ipud 2</string>
    <string name="action_settings">Settings</string>
    <string name="thanksBtnTxt">תודה</string>
    <string name="foodBtTxt">אוכל</string>
    <string name="firePallTxt">עמוד האש</string>
    <string name="stopFirePallTxt">עצור עמוד</string>
    <string name="helilTxt">מסוק</string>
    <string name="casperTxt">קאספר</string>
    <string name="toc">TOC</string>
    <string name="MeatLess" >בשורע</string>
    <string name="pleaseBtnTxt">בבקשה</string>
    <string name="RecordBtn" >Record</string>
    <string name="PudalachBtnTxt">פודלך</string>

</resources>
